2010-10-27  Renata Hodovan  <reni@inf.u-szeged.hu>

Reviewed by Dirk Schulze.

        Calling the super class of RenderSVGImage::updateFromElement is missing
        https://bugs.webkit.org/show_bug.cgi?id=48347

        RenderSVGImage::updateFromElement is an inherited function of RenderSVGModelObject what needs calling its ancestor.
        Lack of this call caused filters were not invalidated at SVGImage objects.

        No new tests, because this modification is covered by SVGFEConvolveMatrixElement's dynamic update tests.

        * rendering/RenderSVGImage.cpp:
        (WebCore::RenderSVGImage::updateFromElement):

git-svn-id: svn://svn.chromium.org/blink/trunk@70654 bbb929c8-8fbe-4397-9dbb-9b2b20218538