third_party/WebKit/WebCore/rendering/RenderSVGImage.cpp
@@ -101,6 +101,7 @@ void RenderSVGImage::updateFromElement()
         m_updateCachedRepaintRect = true;
         setNeedsLayout(true);
     }
+    RenderSVGModelObject::updateFromElement();
 }
 
 void RenderSVGImage::paint(PaintInfo& paintInfo, int, int)
